Adding new speaker
Data & code changes

--- a/voice-auth.ipynb
+++ b/voice-auth.ipynb
@@ -19,7 +19,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Data consists of 2 speakers who generate 13 (10 training + 3 testing) wav files for digits - 1, 2, 3"
+    "Data consists of 3 speakers who generate 13 (10 training + 3 testing) wav files for each digit - 1, 2 & 3."
    ]
   },
   {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,40 @@
       "Speaker2_digit_3\\wav\\Speaker2_digit_3_7.wav\n",
       "Speaker2_digit_3\\wav\\Speaker2_digit_3_8.wav\n",
       "Speaker2_digit_3\\wav\\Speaker2_digit_3_9.wav\n",
-      "+ modeling completed for speaker: Speaker2_digit_3.gmm  with data point =  (652, 40)\n"
+      "+ modeling completed for speaker: Speaker2_digit_3.gmm  with data point =  (652, 40)\n",
+      "Speaker3_digit_1\\wav\\Speaker3_digit_1_0.wav\n",
+      "Speaker3_digit_1\\wav\\Speaker3_digit_1_1.wav\n",
+      "Speaker3_digit_1\\wav\\Speaker3_digit_1_2.wav\n",
+      "Speaker3_digit_1\\wav\\Speaker3_digit_1_3.wav\n",
+      "Speaker3_digit_1\\wav\\Speaker3_digit_1_4.wav\n",
+      "Speaker3_digit_1\\wav\\Speaker3_digit_1_5.wav\n",
+      "Speaker3_digit_1\\wav\\Speaker3_digit_1_6.wav\n",
+      "Speaker3_digit_1\\wav\\Speaker3_digit_1_7.wav\n",
+      "Speaker3_digit_1\\wav\\Speaker3_digit_1_8.wav\n",
+      "Speaker3_digit_1\\wav\\Speaker3_digit_1_9.wav\n",
+      "+ modeling completed for speaker: Speaker3_digit_1.gmm  with data point =  (227, 40)\n",
+      "Speaker3_digit_2\\wav\\Speaker3_digit_2_0.wav\n",
+      "Speaker3_digit_2\\wav\\Speaker3_digit_2_1.wav\n",
+      "Speaker3_digit_2\\wav\\Speaker3_digit_2_2.wav\n",
+      "Speaker3_digit_2\\wav\\Speaker3_digit_2_3.wav\n",
+      "Speaker3_digit_2\\wav\\Speaker3_digit_2_4.wav\n",
+      "Speaker3_digit_2\\wav\\Speaker3_digit_2_5.wav\n",
+      "Speaker3_digit_2\\wav\\Speaker3_digit_2_6.wav\n",
+      "Speaker3_digit_2\\wav\\Speaker3_digit_2_7.wav\n",
+      "Speaker3_digit_2\\wav\\Speaker3_digit_2_8.wav\n",
+      "Speaker3_digit_2\\wav\\Speaker3_digit_2_9.wav\n",
+      "+ modeling completed for speaker: Speaker3_digit_2.gmm  with data point =  (263, 40)\n",
+      "Speaker3_digit_3\\wav\\Speaker3_digit_3_0.wav\n",
+      "Speaker3_digit_3\\wav\\Speaker3_digit_3_1.wav\n",
+      "Speaker3_digit_3\\wav\\Speaker3_digit_3_2.wav\n",
+      "Speaker3_digit_3\\wav\\Speaker3_digit_3_3.wav\n",
+      "Speaker3_digit_3\\wav\\Speaker3_digit_3_4.wav\n",
+      "Speaker3_digit_3\\wav\\Speaker3_digit_3_5.wav\n",
+      "Speaker3_digit_3\\wav\\Speaker3_digit_3_6.wav\n",
+      "Speaker3_digit_3\\wav\\Speaker3_digit_3_7.wav\n",
+      "Speaker3_digit_3\\wav\\Speaker3_digit_3_8.wav\n",
+      "Speaker3_digit_3\\wav\\Speaker3_digit_3_9.wav\n",
+      "+ modeling completed for speaker: Speaker3_digit_3.gmm  with data point =  (240, 40)\n"
      ]
     }
    ],
@@ -330,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -341,10 +374,13 @@
        " 'models\\\\Speaker1_digit_3.gmm',\n",
        " 'models\\\\Speaker2_digit_1.gmm',\n",
        " 'models\\\\Speaker2_digit_2.gmm',\n",
-       " 'models\\\\Speaker2_digit_3.gmm']"
+       " 'models\\\\Speaker2_digit_3.gmm',\n",
+       " 'models\\\\Speaker3_digit_1.gmm',\n",
+       " 'models\\\\Speaker3_digit_2.gmm',\n",
+       " 'models\\\\Speaker3_digit_3.gmm']"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -388,10 +424,19 @@
        "   tol=0.001, verbose=0),\n",
        " GMM(covariance_type='diag', init_params='wmc', min_covar=0.001,\n",
        "   n_components=16, n_init=3, n_iter=200, params='wmc', random_state=None,\n",
+       "   tol=0.001, verbose=0),\n",
+       " GMM(covariance_type='diag', init_params='wmc', min_covar=0.001,\n",
+       "   n_components=16, n_init=3, n_iter=200, params='wmc', random_state=None,\n",
+       "   tol=0.001, verbose=0),\n",
+       " GMM(covariance_type='diag', init_params='wmc', min_covar=0.001,\n",
+       "   n_components=16, n_init=3, n_iter=200, params='wmc', random_state=None,\n",
+       "   tol=0.001, verbose=0),\n",
+       " GMM(covariance_type='diag', init_params='wmc', min_covar=0.001,\n",
+       "   n_components=16, n_init=3, n_iter=200, params='wmc', random_state=None,\n",
        "   tol=0.001, verbose=0)]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -415,10 +460,13 @@
        " 'Speaker1_digit_3',\n",
        " 'Speaker2_digit_1',\n",
        " 'Speaker2_digit_2',\n",
-       " 'Speaker2_digit_3']"
+       " 'Speaker2_digit_3',\n",
+       " 'Speaker3_digit_1',\n",
+       " 'Speaker3_digit_2',\n",
+       " 'Speaker3_digit_3']"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -472,12 +520,32 @@
       "Speaker2_digit_3\\wav\\Speaker2_digit_3_11.wav\n",
       "\tSpeaker & Digit detected as -  Speaker2_digit_2\n",
       "Speaker2_digit_3\\wav\\Speaker2_digit_3_12.wav\n",
-      "\tSpeaker & Digit detected as -  Speaker2_digit_3\n"
+      "\tSpeaker & Digit detected as -  Speaker2_digit_3\n",
+      "Speaker3_digit_1\\wav\\Speaker3_digit_1_10.wav\n",
+      "\tSpeaker & Digit detected as -  Speaker3_digit_1\n",
+      "Speaker3_digit_1\\wav\\Speaker3_digit_1_11.wav\n",
+      "\tSpeaker & Digit detected as -  Speaker3_digit_1\n",
+      "Speaker3_digit_1\\wav\\Speaker3_digit_1_12.wav\n",
+      "\tSpeaker & Digit detected as -  Speaker3_digit_1\n",
+      "Speaker3_digit_2\\wav\\Speaker3_digit_2_10.wav\n",
+      "\tSpeaker & Digit detected as -  Speaker3_digit_2\n",
+      "Speaker3_digit_2\\wav\\Speaker3_digit_2_11.wav\n",
+      "\tSpeaker & Digit detected as -  Speaker3_digit_2\n",
+      "Speaker3_digit_2\\wav\\Speaker3_digit_2_12.wav\n",
+      "\tSpeaker & Digit detected as -  Speaker3_digit_2\n",
+      "Speaker3_digit_3\\wav\\Speaker3_digit_3_10.wav\n",
+      "\tSpeaker & Digit detected as -  Speaker3_digit_3\n",
+      "Speaker3_digit_3\\wav\\Speaker3_digit_3_11.wav\n",
+      "\tSpeaker & Digit detected as -  Speaker3_digit_3\n",
+      "Speaker3_digit_3\\wav\\Speaker3_digit_3_12.wav\n",
+      "\tSpeaker & Digit detected as -  Speaker3_digit_3\n"
      ]
     }
    ],
    "source": [
     "# Read the test directory and get the list of test audio files \n",
+    "path_predicted_dict = dict()\n",
+    "\n",
     "for path in file_paths:   \n",
     "    \n",
     "    path = path.strip()   \n",
@@ -493,16 +561,40 @@
     "        log_likelihood[i] = scores.sum()\n",
     "    \n",
     "    winner = np.argmax(log_likelihood)\n",
-    "    print(\"\\tSpeaker & Digit detected as - \", speakers_digit[winner])\n"
+    "    print(\"\\tSpeaker & Digit detected as - \", speakers_digit[winner])\n",
+    "    path_predicted_dict[path] = speakers_digit[winner]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy on Test Dataset =  96.29629629629629 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "correct_pred = 0\n",
+    "incorrect_pred = 0\n",
+    "for i in path_predicted_dict.keys():\n",
+    "    if i.split(\"\\\\\")[0] == path_predicted_dict[i]:\n",
+    "        correct_pred += 1\n",
+    "    else:\n",
+    "        incorrect_pred += 1\n",
+    "\n",
+    "print(\"Accuracy on Test Dataset = \", correct_pred*100/(correct_pred + incorrect_pred), \"%\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b> Hence, it can be seen how this model effectively predicts the speaker and the corresponding digit he said for the pass code. In acual application this passcode will be a four digit number and the model will also train itself to be more robust with more usage. </b>\n",
-    "\n",
-    "Test Accuracy - <b>17/18</b>"
+    "<b> Hence, it can be seen how this model effectively predicts the speaker and the corresponding digit he said for the pass code. In acual application this passcode will be a four digit number and the model will also train itself to be more robust with more usage. </b>"
    ]
   },
   {
